--- a/wp-content/themes/cimahiwall/style.css
+++ b/wp-content/themes/cimahiwall/style.css
@@ -41,6 +41,12 @@ a.btn:focus, a.btn-filled:hover {
 .header-half {
   height: 40vh !important;
 }
+#headers .header-caption {
+    padding: 10px;
+}
+.top-menu {
+    height: auto;
+}
 
 /* Sidebar */
 #sidebar-post section:not(:first-child) {
@@ -150,10 +156,18 @@ img {
 .portfolio-box-caption-content h3, .portfolio-box-caption-content p  {  color: #ffffff; }
 
 /* Loop Place */
+.place {
+    padding-bottom: 15px;
+}
 .place .image {
   background-size: cover !important;
   background-position: center center !important;
-  height: 300px;
+  height: 80px;
+}
+
+/*Card*/
+.card-title {
+    /*font-family: "Arial", sans-serif;*/
 }
 
 /* Select2 */
@@ -216,3 +230,22 @@ img {
   padding: 10px;
   width: 95px;
 }
+
+
+/*Small devices (landscape phones, 576px and up)*/
+@media (min-width: 576px) { }
+
+/*Medium devices (tablets, 768px and up)*/
+@media (min-width: 768px) {
+    /*Loop place*/
+    .place .image {
+        height: 280px;
+    }
+    .place-desc { padding-top: 15px; }
+}
+
+/*Large devices (desktops, 992px and up)*/
+@media (min-width: 992px) { }
+
+/*Extra large devices (large desktops, 1200px and up)*/
+@media (min-width: 1200px) { }
