--- a/wp-content/themes/cimahiwall/style.css
+++ b/wp-content/themes/cimahiwall/style.css
@@ -138,7 +138,10 @@ img {
   outline: none;
 }
 .portfolio-box.portfolio-box-blog {
-  height: 500px;
+  height: 320px;
+}
+.portfolio-box.portfolio-box-blog h5{
+  color: #ffffff;
 }
 .portfolio-box-blog .portfolio-box-caption .portfolio-box-caption-content {
   padding: 30px 50px 0;
