--- a/wp-content/themes/cimahiwall/style.css
+++ b/wp-content/themes/cimahiwall/style.css
@@ -84,6 +84,10 @@ img.w-auto {
   width: 20px;
 }
 
+/* Navtab */
+ul.nav-tabs li a {
+  font-size: 11px;
+}
 /* Maps */
 #top-map {
   height: 400px;
